force-app/main/default/objects/Planning_Task__c/Planning_Task__c.object-meta.xml
<CustomObject>
    <label>Planning Task</label>
    <nameField>
        <label>Planning Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>