force-app/main/default/objects/Planning_Task__c/fields/Assortment_Date_Finalize__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Date_Finalize__c</fullName>
    <label>Assortment Date Finalize</label>
    <type>Date</type>
</CustomField>