force-app/main/default/objects/Planning_Task__c/fields/Assortment_recommendation_selection_User__c.field-meta.xml
<CustomField>
    <fullName>Assortment_recommendation_selection_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assortment recommendation/selection User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5nCX</relationshipName>
    <type>Lookup</type>
</CustomField>