force-app/main/default/objects/Planning_Task__c/fields/Category_Share_Goals_Targets_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Category_Share_Goals_Targets_Due_Date__c</fullName>
    <label>Category Share Goals/Targets Due Date</label>
    <type>Date</type>
</CustomField>