force-app/main/default/objects/Planning_Task__c/fields/Category_Share_Goals_Targets_Status__c.field-meta.xml
<CustomField>
    <fullName>Category_Share_Goals_Targets_Status__c</fullName>
    <label>Category Share Goals/Targets Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>