force-app/main/default/objects/Planning_Task__c/fields/CategoryShareGoals_Targets_DateFinalize__c.field-meta.xml
<CustomField>
    <fullName>CategoryShareGoals_Targets_DateFinalize__c</fullName>
    <label>CategoryShareGoals/Targets DateFinalize</label>
    <type>Date</type>
</CustomField>