force-app/main/default/objects/Planning_Task__c/fields/Competitor_benchmarking_Status__c.field-meta.xml
<CustomField>
    <fullName>Competitor_benchmarking_Status__c</fullName>
    <label>Competitor benchmarking Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>