force-app/main/default/objects/Planning_Task__c/fields/Competitor_benchmarking_User__c.field-meta.xml
<CustomField>
    <fullName>Competitor_benchmarking_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor benchmarking User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5nDQ</relationshipName>
    <type>Lookup</type>
</CustomField>