force-app/main/default/objects/Planning_Task__c/fields/Consumer_reviews_Date_Finalize__c.field-meta.xml
<CustomField>
    <fullName>Consumer_reviews_Date_Finalize__c</fullName>
    <label>Consumer reviews Date Finalize</label>
    <type>Date</type>
</CustomField>