force-app/main/default/objects/Planning_Task__c/fields/Consumer_reviews_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Consumer_reviews_Due_Date__c</fullName>
    <label>Consumer reviews Due Date</label>
    <type>Date</type>
</CustomField>