force-app/main/default/objects/Planning_Task__c/fields/Consumer_reviews_Status__c.field-meta.xml
<CustomField>
    <fullName>Consumer_reviews_Status__c</fullName>
    <label>Consumer reviews Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>