force-app/main/default/objects/Planning_Task__c/fields/Consumer_reviews_User__c.field-meta.xml
<CustomField>
    <fullName>Consumer_reviews_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer reviews User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5o2b</relationshipName>
    <type>Lookup</type>
</CustomField>