force-app/main/default/objects/Planning_Task__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planning Tasks</relationshipLabel>
    <relationshipName>Planning_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>