force-app/main/default/objects/Planning_Task__c/fields/Customer_KPI_s_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_KPI_s_Due_Date__c</fullName>
    <label>Customer KPI&apos;s Due Date</label>
    <type>Date</type>
</CustomField>