force-app/main/default/objects/Planning_Task__c/fields/Customer_KPI_s_User__c.field-meta.xml
<CustomField>
    <fullName>Customer_KPI_s_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer KPI&apos;s User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5nzc</relationshipName>
    <type>Lookup</type>
</CustomField>