force-app/main/default/objects/Planning_Task__c/fields/Digital_Ads_Date_Finalize__c.field-meta.xml
<CustomField>
    <fullName>Digital_Ads_Date_Finalize__c</fullName>
    <label>Digital Ads Date Finalize</label>
    <type>Date</type>
</CustomField>