force-app/main/default/objects/Planning_Task__c/fields/Digital_Ads_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Digital_Ads_Due_Date__c</fullName>
    <label>Digital Ads Due Date</label>
    <type>Date</type>
</CustomField>