force-app/main/default/objects/Planning_Task__c/fields/Digital_Ads_Status__c.field-meta.xml
<CustomField>
    <fullName>Digital_Ads_Status__c</fullName>
    <label>Digital Ads Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>