force-app/main/default/objects/Planning_Task__c/fields/EOL_plans_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>EOL_plans_Due_Date__c</fullName>
    <label>EOL plans Due Date</label>
    <type>Date</type>
</CustomField>