force-app/main/default/objects/Planning_Task__c/fields/EOL_plans_User__c.field-meta.xml
<CustomField>
    <fullName>EOL_plans_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOL plans User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5nEx</relationshipName>
    <type>Lookup</type>
</CustomField>