force-app/main/default/objects/Planning_Task__c/fields/Expert_reviews_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Expert_reviews_Due_Date__c</fullName>
    <label>Expert reviews Due Date</label>
    <type>Date</type>
</CustomField>