force-app/main/default/objects/Planning_Task__c/fields/Expert_reviews_Status__c.field-meta.xml
<CustomField>
    <fullName>Expert_reviews_Status__c</fullName>
    <label>Expert reviews Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>