force-app/main/default/objects/Planning_Task__c/fields/JBP_3_Year_Plans_Date_Finalize__c.field-meta.xml
<CustomField>
    <fullName>JBP_3_Year_Plans_Date_Finalize__c</fullName>
    <label>JBP 3-Year Plans Date Finalize</label>
    <type>Date</type>
</CustomField>