force-app/main/default/objects/Planning_Task__c/fields/JBP_3_Year_Plans_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>JBP_3_Year_Plans_Due_Date__c</fullName>
    <label>JBP 3-Year Plans Due Date</label>
    <type>Date</type>
</CustomField>