force-app/main/default/objects/Planning_Task__c/fields/JBP_3_Year_Plans_Status__c.field-meta.xml
<CustomField>
    <fullName>JBP_3_Year_Plans_Status__c</fullName>
    <label>JBP 3-Year Plans Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>