force-app/main/default/objects/Planning_Task__c/fields/Map_UPP_Policy_review_Date_Finalize__c.field-meta.xml
<CustomField>
    <fullName>Map_UPP_Policy_review_Date_Finalize__c</fullName>
    <label>Map/UPP Policy review Date Finalize</label>
    <type>Date</type>
</CustomField>