force-app/main/default/objects/Planning_Task__c/fields/Map_UPP_Policy_review_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Map_UPP_Policy_review_Due_Date__c</fullName>
    <label>Map/UPP Policy review Due Date</label>
    <type>Date</type>
</CustomField>