force-app/main/default/objects/Planning_Task__c/fields/MDF_Budgets_Date_Finalize__c.field-meta.xml
<CustomField>
    <fullName>MDF_Budgets_Date_Finalize__c</fullName>
    <label>MDF Budgets Date Finalize</label>
    <type>Date</type>
</CustomField>