force-app/main/default/objects/Planning_Task__c/fields/MDF_Budgets_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MDF_Budgets_Due_Date__c</fullName>
    <label>MDF Budgets Due Date</label>
    <type>Date</type>
</CustomField>