force-app/main/default/objects/Planning_Task__c/fields/MDF_Budgets_Status__c.field-meta.xml
<CustomField>
    <fullName>MDF_Budgets_Status__c</fullName>
    <label>MDF Budgets Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>