force-app/main/default/objects/Planning_Task__c/fields/NPI_360_plans_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>NPI_360_plans_Due_Date__c</fullName>
    <label>NPI 360&apos; plans Due Date</label>
    <type>Date</type>
</CustomField>