force-app/main/default/objects/Planning_Task__c/fields/NPI_360_plans_Status__c.field-meta.xml
<CustomField>
    <fullName>NPI_360_plans_Status__c</fullName>
    <label>NPI 360&apos; plans Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>