force-app/main/default/objects/Planning_Task__c/fields/NPI_360_plans_User__c.field-meta.xml
<CustomField>
    <fullName>NPI_360_plans_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPI 360&apos; plans User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5nz3</relationshipName>
    <type>Lookup</type>
</CustomField>