force-app/main/default/objects/Planning_Task__c/fields/Online_Agreements_Auth_Reseller_Due__c.field-meta.xml
<CustomField>
    <fullName>Online_Agreements_Auth_Reseller_Due__c</fullName>
    <label>Online Agreements / Auth Reseller Due</label>
    <type>Date</type>
</CustomField>