force-app/main/default/objects/Planning_Task__c/fields/Online_Agreements_Auth_Reseller_Finalize__c.field-meta.xml
<CustomField>
    <fullName>Online_Agreements_Auth_Reseller_Finalize__c</fullName>
    <label>Online Agreements/Auth Reseller Finalize</label>
    <type>Date</type>
</CustomField>