force-app/main/default/objects/Planning_Task__c/fields/Online_Agreements_Auth_Reseller_Status__c.field-meta.xml
<CustomField>
    <fullName>Online_Agreements_Auth_Reseller_Status__c</fullName>
    <label>Online Agreements / Auth Reseller Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>