force-app/main/default/objects/Planning_Task__c/fields/Online_Agreements_Auth_Reseller_User__c.field-meta.xml
<CustomField>
    <fullName>Online_Agreements_Auth_Reseller_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Agreements / Auth Reseller User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5o0Q</relationshipName>
    <type>Lookup</type>
</CustomField>