force-app/main/default/objects/Planning_Task__c/fields/Online_Checklist_Date_Finalize__c.field-meta.xml
<CustomField>
    <fullName>Online_Checklist_Date_Finalize__c</fullName>
    <label>Online Checklist Date Finalize</label>
    <type>Date</type>
</CustomField>