force-app/main/default/objects/Planning_Task__c/fields/Online_Checklist_Status__c.field-meta.xml
<CustomField>
    <fullName>Online_Checklist_Status__c</fullName>
    <label>Online Checklist Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>