force-app/main/default/objects/Planning_Task__c/fields/Online_Checklist_User__c.field-meta.xml
<CustomField>
    <fullName>Online_Checklist_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Checklist User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5o22</relationshipName>
    <type>Lookup</type>
</CustomField>