force-app/main/default/objects/Planning_Task__c/fields/PDP_s_with_enhanced_content_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>PDP_s_with_enhanced_content_Due_Date__c</fullName>
    <label>PDP&apos;s with enhanced content Due Date</label>
    <type>Date</type>
</CustomField>