force-app/main/default/objects/Planning_Task__c/fields/PDP_s_with_enhanced_content_Status__c.field-meta.xml
<CustomField>
    <fullName>PDP_s_with_enhanced_content_Status__c</fullName>
    <label>PDP&apos;s with enhanced content Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>