force-app/main/default/objects/Planning_Task__c/fields/Pricing_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Status__c</fullName>
    <label>Pricing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>