force-app/main/default/objects/Planning_Task__c/fields/Pricing_User__c.field-meta.xml
<CustomField>
    <fullName>Pricing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5nC8</relationshipName>
    <type>Lookup</type>
</CustomField>