force-app/main/default/objects/Planning_Task__c/fields/Product_photos_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_photos_Status__c</fullName>
    <label>Product photos Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>