force-app/main/default/objects/Planning_Task__c/fields/Product_photos_User__c.field-meta.xml
<CustomField>
    <fullName>Product_photos_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product photos User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5o0u</relationshipName>
    <type>Lookup</type>
</CustomField>