force-app/main/default/objects/Planning_Task__c/fields/Program_Letters_VPA_s_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Letters_VPA_s_Due_Date__c</fullName>
    <label>Program Letters/VPA&apos;s Due Date</label>
    <type>Date</type>
</CustomField>