force-app/main/default/objects/Planning_Task__c/fields/Program_Letters_VPA_s_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Letters_VPA_s_Status__c</fullName>
    <label>Program Letters/VPA&apos;s Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>