force-app/main/default/objects/Planning_Task__c/fields/Revenue_Targets_Date_Finalize__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Targets_Date_Finalize__c</fullName>
    <label>Revenue Targets Date Finalize</label>
    <type>Date</type>
</CustomField>