force-app/main/default/objects/Planning_Task__c/fields/Revenue_Targets_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Targets_Due_Date__c</fullName>
    <label>Revenue Targets Due Date</label>
    <type>Date</type>
</CustomField>