force-app/main/default/objects/Planning_Task__c/fields/Revenue_Targets_Status__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Targets_Status__c</fullName>
    <label>Revenue Targets Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>