force-app/main/default/objects/Planning_Task__c/fields/Revenue_Targets_User__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Targets_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Targets User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5nAC</relationshipName>
    <type>Lookup</type>
</CustomField>