force-app/main/default/objects/Planning_Task__c/fields/Sales_Information_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Information_Due_Date__c</fullName>
    <description>2021 Sales Program design, presetation and alignment</description>
    <label>Sales Information Due Date</label>
    <type>Date</type>
</CustomField>