force-app/main/default/objects/Planning_Task__c/fields/Sales_Information_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Information_Status__c</fullName>
    <description>2021 Sales Program design, presetation and alignment</description>
    <label>Sales Information Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>