force-app/main/default/objects/Planning_Task__c/fields/Sales_Information_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Information_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2021 Sales Program design, presetation and alignment</description>
    <label>Sales Information User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5nzD</relationshipName>
    <type>Lookup</type>
</CustomField>