force-app/main/default/objects/Planning_Task__c/fields/Tech_Specs_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Tech_Specs_Due_Date__c</fullName>
    <label>Tech &amp; Specs Due Date</label>
    <type>Date</type>
</CustomField>