force-app/main/default/objects/Planning_Task__c/fields/Tech_Specs_Status__c.field-meta.xml
<CustomField>
    <fullName>Tech_Specs_Status__c</fullName>
    <label>Tech &amp; Specs Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>