force-app/main/default/objects/Planning_Task__c/fields/Training_External_Date_Finalize__c.field-meta.xml
<CustomField>
    <fullName>Training_External_Date_Finalize__c</fullName>
    <label>Training - External Date Finalize</label>
    <type>Date</type>
</CustomField>