force-app/main/default/objects/Planning_Task__c/fields/Training_External_Status__c.field-meta.xml
<CustomField>
    <fullName>Training_External_Status__c</fullName>
    <label>Training - External Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>