force-app/main/default/objects/Planning_Task__c/fields/Training_External_User__c.field-meta.xml
<CustomField>
    <fullName>Training_External_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training - External User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5o2C</relationshipName>
    <type>Lookup</type>
</CustomField>