force-app/main/default/objects/Planning_Task__c/fields/X6_Month_Customer_Forecasts_Date_Finaliz__c.field-meta.xml
<CustomField>
    <fullName>X6_Month_Customer_Forecasts_Date_Finaliz__c</fullName>
    <label>6 Month Customer Forecasts Date Finalize</label>
    <type>Date</type>
</CustomField>