force-app/main/default/objects/Planning_Task__c/fields/X6_Month_Customer_Forecasts_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X6_Month_Customer_Forecasts_Due_Date__c</fullName>
    <label>6 Month Customer Forecasts Due Date</label>
    <type>Date</type>
</CustomField>