force-app/main/default/objects/Planning_Task__c/fields/X6_Month_Customer_Forecasts_Status__c.field-meta.xml
<CustomField>
    <fullName>X6_Month_Customer_Forecasts_Status__c</fullName>
    <label>6 Month Customer Forecasts Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>