force-app/main/default/objects/Planning_Task__c/fields/X6_Month_Customer_Forecasts_User__c.field-meta.xml
<CustomField>
    <fullName>X6_Month_Customer_Forecasts_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>6 Month Customer Forecasts User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planning_Tasks5nzO</relationshipName>
    <type>Lookup</type>
</CustomField>